--- a/StudentWebApp/appsettings.json
+++ b/StudentWebApp/appsettings.json
@@ -5,9 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ApiSettings": {
-    "BaseUrl": "https://localhost:7246/"
-  }
-  
+  "AllowedHosts": "*"
+ 
 }
