--- a/StudentWebApp/StudentWebApp.csproj
+++ b/StudentWebApp/StudentWebApp.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+	  <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>3d1404b4-ddd7-48d4-8fdc-2839c61bee32</UserSecretsId>
+    <ImplicitUsings>enable</ImplicitUsings>   
   </PropertyGroup>
 
   <ItemGroup>
